tradução e criação de variáveis CSS

--- a/index.html
+++ b/index.html
@@ -1,68 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  About
-  Services
-  Projects
-  Contact
+	<link rel="stylesheet" href="./css/styles.css">
 
-  We are creatives
+    <title>Frontend Mentor | Sunnyside agency</title>
+  </head>
+  <body>
+    Sobre 
+	Serviços 
+	Projetos 
+	Contato 
+	
+	Somos criativos 
+	
+	Transforme sua marca 
+	Somos uma agência criativa de serviço completo especializada em ajudar marcas a crescer rapidamente. Engaje seus clientes por meio de visuais convincentes que fazem a maior parte do marketing para você. 
+	Saiba mais 
+	
+	Destaque-se para
+    o público certo 
+	Usando uma fórmula colaborativa de designers, pesquisadores,
+    fotógrafos, videógrafos e redatores, construiremos e estenderemos sua marca
+    em lugares digitais. 
+	Saiba mais 
+	
+	Design gráfico 
+	Um ótimo design torna você
+    memorável. Entregamos obras de arte que destacam a mensagem de sua marca e
+    capturam a atenção de potenciais clientes. 
+	
+	Fotografia 
+	Aumente sua
+    credibilidade obtendo as fotos mais deslumbrantes e de alta qualidade que
+    melhoram a imagem de seu negócio. 
+	
+	Depoimentos de clientes 
+	
+	Depositamos nossa
+    confiança na Sunnyside e eles entregaram, garantindo que nossas necessidades
+    fossem atendidas e os prazos sempre cumpridos. 
+	Emily R. 
+	Diretora de Marketing 
+	
+	O entusiasmo da Sunnyside, combinado com seu grande interesse no
+    sucesso de nossa marca, tornou a experiência satisfatória e agradável.
+    Thomas S. 
+	Diretor de Operações 
+	
+	Resultado final incrível! Nossas vendas
+    aumentaram mais de 400% quando trabalhamos com a Sunnyside. Altamente
+    recomendado! 
+	Jennie F. 
+	Proprietária de negócios 
+	
+	Sobre 
+	Serviços 
+	Projetos
+    Contato
 
-  Transform your brand
-
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
-
-  Learn more
-
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
-  About
-  Services
-  Projects
-  Contact
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </body>
 </html>
