--- a/index.html
+++ b/index.html
@@ -11,62 +11,122 @@
       href="./images/favicon-32x32.png"
     />
 
-	<link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
 
     <title>Frontend Mentor | Sunnyside agency</title>
   </head>
   <body>
-    Sobre 
-	Serviços 
-	Projetos 
-	Contato 
-	
-	Somos criativos 
-	
-	Transforme sua marca 
-	Somos uma agência criativa de serviço completo especializada em ajudar marcas a crescer rapidamente. Engaje seus clientes por meio de visuais convincentes que fazem a maior parte do marketing para você. 
-	Saiba mais 
-	
-	Destaque-se para
-    o público certo 
-	Usando uma fórmula colaborativa de designers, pesquisadores,
-    fotógrafos, videógrafos e redatores, construiremos e estenderemos sua marca
-    em lugares digitais. 
-	Saiba mais 
-	
-	Design gráfico 
-	Um ótimo design torna você
-    memorável. Entregamos obras de arte que destacam a mensagem de sua marca e
-    capturam a atenção de potenciais clientes. 
-	
-	Fotografia 
-	Aumente sua
-    credibilidade obtendo as fotos mais deslumbrantes e de alta qualidade que
-    melhoram a imagem de seu negócio. 
-	
-	Depoimentos de clientes 
-	
-	Depositamos nossa
-    confiança na Sunnyside e eles entregaram, garantindo que nossas necessidades
-    fossem atendidas e os prazos sempre cumpridos. 
-	Emily R. 
-	Diretora de Marketing 
-	
-	O entusiasmo da Sunnyside, combinado com seu grande interesse no
-    sucesso de nossa marca, tornou a experiência satisfatória e agradável.
-    Thomas S. 
-	Diretor de Operações 
-	
-	Resultado final incrível! Nossas vendas
-    aumentaram mais de 400% quando trabalhamos com a Sunnyside. Altamente
-    recomendado! 
-	Jennie F. 
-	Proprietária de negócios 
-	
-	Sobre 
-	Serviços 
-	Projetos
-    Contato
+    <section class="hero__wrapper">
+      <header>
+        <img src="./images/logo.svg" alt="" class="header__logo" />
+        <div class="nav-wrapper">
+          <button class="header__burguer-button">
+            <img src="./images/icon-hamburger.svg" />
+          </button>
+          <nav class="header__nav">
+            <ul>
+              <li>Sobre</li>
+              <li>Serviços</li>
+              <li>Projetos</li>
+              <li>Contato</li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <section class="hero">
+        <h1>Somos criativos</h1>
+		<img src="./images/icon-arrow-down.svg" alt="" class="hero-arrow">
+      </section>
+    </section>
+
+    <main>
+      <section class="main-division"></section>
+      <section class="main-division">
+        <h2>Transforme sua marca</h2>
+        <p>
+          Somos uma agência criativa de serviço completo especializada em ajudar
+          marcas a crescer rapidamente. Engaje seus clientes por meio de visuais
+          convincentes que fazem a maior parte do marketing para você.
+        </p>
+        <button>Saiba mais</button>
+      </section>
+      <section class="main-division"></section>
+      <section class="main-division">
+        <h2>Destaque-se para o público certo</h2>
+        <p>
+          Usando uma fórmula colaborativa de designers, pesquisadores,
+          fotógrafos, videógrafos e redatores, construiremos e estenderemos sua
+          marca em lugares digitais.
+        </p>
+        <button>Saiba mais</button>
+      </section>
+
+      <section class="main-division">
+        <h2>Design gráfico</h2>
+        <p>
+          Um ótimo design torna você memorável. Entregamos obras de arte que
+          destacam a mensagem de sua marca e capturam a atenção de potenciais
+          clientes.
+        </p>
+      </section>
+
+      <section class="main-division">
+        <h2>Fotografia</h2>
+        <p>
+          Aumente sua credibilidade obtendo as fotos mais deslumbrantes e de
+          alta qualidade que melhoram a imagem de seu negócio.
+        </p>
+      </section>
+    </main>
+    <section class="client-testimonials-wrapper">
+      <h2>Depoimentos de clientes</h2>
+      <section class="client-testimonials">
+        <div class="client">
+          <img src="" alt="" class="client__img" />
+          <p class="client-testimonial">
+            Depositamos nossa confiança na Sunnyside e eles entregaram,
+            garantindo que nossas necessidades fossem atendidas e os prazos
+            sempre cumpridos.
+          </p>
+          <p class="client-name">Emily R.</p>
+          <p class="client-occupation">Diretora de Marketing</p>
+        </div>
+        <div class="client">
+          <img src="" alt="" class="client__img" />
+          <p class="client-testimonial">
+            O entusiasmo da Sunnyside, combinado com seu grande interesse no
+            sucesso de nossa marca, tornou a experiência satisfatória e
+            agradável.
+          </p>
+          <p class="client-name">Thomas S.</p>
+          <p class="client-occupation">Diretor de Operações</p>
+        </div>
+        <div class="client">
+          <img src="" alt="" class="client__img" />
+          <p class="client-testimonial">
+            Resultado final incrível! Nossas vendas aumentaram mais de 400%
+            quando trabalhamos com a Sunnyside. Altamente recomendado!
+          </p>
+          <p class="client-name">Jennie F.</p>
+          <p class="client-occupation">Proprietária de negócios</p>
+        </div>
+      </section>
+    </section>
+
+    <section class="image-grid">
+      <div class="image-grid__img-wrapper"></div>
+      <div class="image-grid__img-wrapper"></div>
+      <div class="image-grid__img-wrapper"></div>
+      <div class="image-grid__img-wrapper"></div>
+    </section>
+
+    <footer>
+      <ul>
+        <li>Sobre</li>
+        <li>Serviços</li>
+        <li>Projetos</li>
+      </ul>
+    </footer>
 
     <div class="attribution">
       Challenge by
