estilização da seção principal

--- a/index.html
+++ b/index.html
@@ -35,13 +35,19 @@
       </header>
       <section class="hero">
         <h1>Somos criativos</h1>
-		<img src="./images/icon-arrow-down.svg" alt="" class="hero-arrow">
+        <img src="./images/icon-arrow-down.svg" alt="" class="hero-arrow" />
       </section>
     </section>
 
     <main>
-      <section class="main-division"></section>
-      <section class="main-division">
+      <section class="main-division" id="egg">
+        <img
+          src="./images/mobile/image-transform.jpg"
+          alt=""
+          class="main-division__img"
+        />
+      </section>
+      <section class="main-division" id="brand">
         <h2>Transforme sua marca</h2>
         <p>
           Somos uma agência criativa de serviço completo especializada em ajudar
@@ -50,8 +56,14 @@
         </p>
         <button>Saiba mais</button>
       </section>
-      <section class="main-division"></section>
-      <section class="main-division">
+      <section class="main-division" id="cup">
+        <img
+          src="./images/mobile/image-stand-out.jpg"
+          alt=""
+          class="main-division__img"
+        />
+      </section>
+      <section class="main-division" id="audience">
         <h2>Destaque-se para o público certo</h2>
         <p>
           Usando uma fórmula colaborativa de designers, pesquisadores,
@@ -61,7 +73,7 @@
         <button>Saiba mais</button>
       </section>
 
-      <section class="main-division">
+      <section class="main-division" id="design">
         <h2>Design gráfico</h2>
         <p>
           Um ótimo design torna você memorável. Entregamos obras de arte que
@@ -70,7 +82,7 @@
         </p>
       </section>
 
-      <section class="main-division">
+      <section class="main-division" id="photography">
         <h2>Fotografia</h2>
         <p>
           Aumente sua credibilidade obtendo as fotos mais deslumbrantes e de
