--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <h2>Depoimentos de clientes</h2>
       <section class="client-testimonials">
         <div class="client">
-          <img src="" alt="" class="client__img" />
+          <img src="./images/image-emily.jpg" alt="" class="client__img" />
           <p class="client-testimonial">
             Depositamos nossa confiança na Sunnyside e eles entregaram,
             garantindo que nossas necessidades fossem atendidas e os prazos
@@ -104,7 +104,7 @@
           <p class="client-occupation">Diretora de Marketing</p>
         </div>
         <div class="client">
-          <img src="" alt="" class="client__img" />
+          <img src="./images/image-thomas.jpg" alt="" class="client__img" />
           <p class="client-testimonial">
             O entusiasmo da Sunnyside, combinado com seu grande interesse no
             sucesso de nossa marca, tornou a experiência satisfatória e
@@ -114,7 +114,7 @@
           <p class="client-occupation">Diretor de Operações</p>
         </div>
         <div class="client">
-          <img src="" alt="" class="client__img" />
+          <img src="./images/image-jennie.jpg" alt="" class="client__img" />
           <p class="client-testimonial">
             Resultado final incrível! Nossas vendas aumentaram mais de 400%
             quando trabalhamos com a Sunnyside. Altamente recomendado!
@@ -126,10 +126,34 @@
     </section>
 
     <section class="image-grid">
-      <div class="image-grid__img-wrapper"></div>
-      <div class="image-grid__img-wrapper"></div>
-      <div class="image-grid__img-wrapper"></div>
-      <div class="image-grid__img-wrapper"></div>
+      <div class="image-grid__img-wrapper">
+        <img
+          src="./images/mobile/image-gallery-milkbottles.jpg"
+          alt=""
+          class="image-grid__img"
+        />
+      </div>
+      <div class="image-grid__img-wrapper">
+        <img
+          src="./images/mobile/image-gallery-orange.jpg"
+          alt=""
+          class="image-grid__img"
+        />
+      </div>
+      <div class="image-grid__img-wrapper">
+        <img
+          src="./images/mobile/image-gallery-cone.jpg"
+          alt=""
+          class="image-grid__img"
+        />
+      </div>
+      <div class="image-grid__img-wrapper">
+        <img
+          src="./images/mobile/image-gallery-sugar-cubes.jpg"
+          alt=""
+          class="image-grid__img"
+        />
+      </div>
     </section>
 
     <footer>
