--- a/index.html
+++ b/index.html
@@ -157,18 +157,18 @@
     </section>
 
     <footer>
+      <img src="./images/logo.svg" alt="" class="footer__logo" />
       <ul>
         <li>Sobre</li>
         <li>Serviços</li>
         <li>Projetos</li>
       </ul>
+      <div class="icons-wrapper">
+        <img src="./images/icon-facebook.svg" alt="" class="footer__icon" />
+        <img src="./images/icon-instagram.svg" alt="" class="footer__icon" />
+        <img src="./images/icon-twitter.svg" alt="" class="footer__icon" />
+        <img src="./images/icon-pinterest.svg" alt="" class="footer__icon" />
+      </div>
     </footer>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
   </body>
 </html>
