início do menu mobile

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
 
     <title>Frontend Mentor | Sunnyside agency</title>
+    <script src="./js/script.js" defer></script>
   </head>
   <body>
     <section class="hero__wrapper">
@@ -24,6 +25,14 @@
             <img src="./images/icon-hamburger.svg" />
           </button>
           <nav class="header__nav">
+            <ul>
+              <li>Sobre</li>
+              <li>Serviços</li>
+              <li>Projetos</li>
+              <li>Contato</li>
+            </ul>
+          </nav>
+          <nav class="header__nav--mobile">
             <ul>
               <li>Sobre</li>
               <li>Serviços</li>
