alterações versão desktop

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
               <li>Sobre</li>
               <li>Serviços</li>
               <li>Projetos</li>
-              <li>Contato</li>
+              <li>
+                <button class="nav__contact-button">Contato</button>
+              </li>
             </ul>
           </nav>
           <nav class="header__nav--mobile">
@@ -37,7 +39,9 @@
               <li>Sobre</li>
               <li>Serviços</li>
               <li>Projetos</li>
-              <li>Contato</li>
+              <li>
+                <button class="nav__contact-button">Contato</button>
+              </li>
             </ul>
           </nav>
         </div>
